--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "express-session": "^1.18.1",
     "mysql2": "^3.16.0"
   }
 }
