--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-ejs-mysql",
+  "name": "express-ejs-dynamodb-s3",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.700.0",
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/lib-dynamodb": "^3.700.0",
+    "dotenv": "^17.2.3",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
     "express-session": "^1.18.1",
-    "mysql2": "^3.16.0"
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^11.0.5"
   }
 }
