--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "express-ejs-dynamodb-s3",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "Product Management System with DynamoDB, S3, Authentication & Authorization",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test:connection": "node scripts/test-connection.js",
+    "setup": "node scripts/setup-tables.js",
+    "setup:recreate": "node scripts/setup-tables.js --recreate",
+    "seed": "node scripts/seed-data.js",
+    "init": "npm run setup && npm run seed"
   },
-  "keywords": [],
+  "keywords": ["express", "dynamodb", "s3", "authentication", "product-management"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.700.0",
     "@aws-sdk/client-s3": "^3.700.0",
     "@aws-sdk/lib-dynamodb": "^3.700.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
     "express-session": "^1.18.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
